--- a/GWP_Project_2/Zillow_Housing_Data_EDA.ipynb
+++ b/GWP_Project_2/Zillow_Housing_Data_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "0c911f73-cbf5-4e8c-9276-ac49c6e0158a",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "926a8f89-9fe7-49ac-83ee-17062df7dc24",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
        "[5 rows x 292 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "fab6be76-1766-4475-8e6b-0d14bab94cd3",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "      dtype='object', length=292)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "720027dd-3ec0-4455-9582-bb7125dc20e7",
    "metadata": {},
    "outputs": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "id": "2283d988-4ed1-4024-9dba-00953b4d9e8a",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "id": "2921e087-69ca-4a39-97d8-23b657f21a47",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "[287 rows x 4 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "f607208a-4343-4b1f-b60a-cd59024f59ec",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 9,
    "id": "9ac84112-7a58-4c2f-8dc7-1aa1feb383d2",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "id": "9a9510b6-f050-4832-9e9a-6ac05942df3e",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "<Axes: xlabel='Date'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -553,12 +553,244 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cce0ae5d-5866-47fd-9fb7-44638e4b68c1",
+   "metadata": {},
+   "source": [
+    "### Scatter plots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43099ce1-269a-4080-b599-94a86b578698",
+   "id": "5641400d-ba7b-49ae-bfeb-c07ce378913b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vix_df=vix_df.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "29a12cca-ad52-4903-b422-768ea4ead1ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_df['Date']=pd.to_datetime(housing_df['Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "056712e8-c29a-4b30-a236-bdd2c83d3cb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RegionID</th>\n",
+       "      <th>RegionName</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>value</th>\n",
+       "      <th>vix</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2000-01-31</td>\n",
+       "      <td>120020.015498</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.950001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2000-02-29</td>\n",
+       "      <td>120231.169181</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.370001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2000-03-31</td>\n",
+       "      <td>120493.030838</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24.110001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2000-04-30</td>\n",
+       "      <td>121054.672692</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>26.200001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2000-05-31</td>\n",
+       "      <td>121701.055130</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.650000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>282</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2023-07-31</td>\n",
+       "      <td>341676.927889</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.630000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>283</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2023-08-31</td>\n",
+       "      <td>343283.109664</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.570000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2023-09-30</td>\n",
+       "      <td>344496.587317</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.520000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>285</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2023-10-31</td>\n",
+       "      <td>345404.638956</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18.139999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>102001</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>2023-11-30</td>\n",
+       "      <td>346047.922374</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.980000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>287 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     RegionID     RegionName       Date          value  vix  Adj Close\n",
+       "0      102001  United States 2000-01-31  120020.015498  NaN  24.950001\n",
+       "1      102001  United States 2000-02-29  120231.169181  NaN  23.370001\n",
+       "2      102001  United States 2000-03-31  120493.030838  NaN  24.110001\n",
+       "3      102001  United States 2000-04-30  121054.672692  NaN  26.200001\n",
+       "4      102001  United States 2000-05-31  121701.055130  NaN  23.650000\n",
+       "..        ...            ...        ...            ...  ...        ...\n",
+       "282    102001  United States 2023-07-31  341676.927889  NaN  13.630000\n",
+       "283    102001  United States 2023-08-31  343283.109664  NaN  13.570000\n",
+       "284    102001  United States 2023-09-30  344496.587317  NaN  17.520000\n",
+       "285    102001  United States 2023-10-31  345404.638956  NaN  18.139999\n",
+       "286    102001  United States 2023-11-30  346047.922374  NaN  12.980000\n",
+       "\n",
+       "[287 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_df.merge(vix_df,on='Date')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "6ca33e80-5edd-423a-b9a3-48e338aadf8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df=housing_df.merge(vix_df,on='Date').set_index('Date')[['value','Adj Close']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "34f1276e-4092-4a70-a05a-677357f7fccd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df_std=merged_df.sub(merged_df.mean()).div(merged_df.std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "dac4a7ff-595a-4aff-be64-911807680b63",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "scatter requires an x and y column",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mmerged_df_std\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkind\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mscatter\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\financial_modelling\\Lib\\site-packages\\pandas\\plotting\\_core.py:976\u001b[0m, in \u001b[0;36mPlotAccessor.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    974\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m kind \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataframe_kinds:\n\u001b[0;32m    975\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(data, ABCDataFrame):\n\u001b[1;32m--> 976\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mplot_backend\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkind\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    977\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    978\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mplot kind \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkind\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m can only be used for data frames\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\financial_modelling\\Lib\\site-packages\\pandas\\plotting\\_matplotlib\\__init__.py:70\u001b[0m, in \u001b[0;36mplot\u001b[1;34m(data, kind, **kwargs)\u001b[0m\n\u001b[0;32m     68\u001b[0m             ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mgca()\n\u001b[0;32m     69\u001b[0m         kwargs[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124max\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(ax, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mleft_ax\u001b[39m\u001b[38;5;124m\"\u001b[39m, ax)\n\u001b[1;32m---> 70\u001b[0m plot_obj \u001b[38;5;241m=\u001b[39m \u001b[43mPLOT_CLASSES\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkind\u001b[49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     71\u001b[0m plot_obj\u001b[38;5;241m.\u001b[39mgenerate()\n\u001b[0;32m     72\u001b[0m plot_obj\u001b[38;5;241m.\u001b[39mdraw()\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\financial_modelling\\Lib\\site-packages\\pandas\\plotting\\_matplotlib\\core.py:1207\u001b[0m, in \u001b[0;36mScatterPlot.__init__\u001b[1;34m(self, data, x, y, s, c, **kwargs)\u001b[0m\n\u001b[0;32m   1205\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m is_hashable(s) \u001b[38;5;129;01mand\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m data\u001b[38;5;241m.\u001b[39mcolumns:\n\u001b[0;32m   1206\u001b[0m     s \u001b[38;5;241m=\u001b[39m data[s]\n\u001b[1;32m-> 1207\u001b[0m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ms\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1208\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(c) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39m_holds_integer():\n\u001b[0;32m   1209\u001b[0m     c \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mcolumns[c]\n",
+      "File \u001b[1;32m~\\anaconda3\\envs\\financial_modelling\\Lib\\site-packages\\pandas\\plotting\\_matplotlib\\core.py:1148\u001b[0m, in \u001b[0;36mPlanePlot.__init__\u001b[1;34m(self, data, x, y, **kwargs)\u001b[0m\n\u001b[0;32m   1146\u001b[0m MPLPlot\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, data, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1147\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mor\u001b[39;00m y \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m-> 1148\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_kind \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m requires an x and y column\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m   1149\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(x) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39m_holds_integer():\n\u001b[0;32m   1150\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mcolumns[x]\n",
+      "\u001b[1;31mValueError\u001b[0m: scatter requires an x and y column"
+     ]
+    }
+   ],
+   "source": [
+    "merged_df_std.plot(x='value',y='Adj Close',kind='Sca')"
+   ]
   }
  ],
  "metadata": {
